# oidtdb

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
long/: Makefile.am  Makefile.in  configure  configure.ac
long/po/: LINGUAS  Makevars  POTFILES.in  ar.gmo  ar.po  bg.gmo  bg.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  es_MX.gmo  es_MX.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  fr_CA.gmo  fr_CA.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  (+38 more)
pot/: oids.pot
short/: configure  configure.ac
short/po/: LINGUAS  Makevars  ar.gmo  ar.po  bg.gmo  bg.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  es_MX.gmo  es_MX.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  fr_CA.gmo  fr_CA.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  (+37 more)
