#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([oidtdb], m4_esyscmd([./build-aux/git-version-gen ./.tarball-version]))
AC_CONFIG_AUX_DIR([./build-aux])
AM_INIT_AUTOMAKE([-Wall])
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_SUBDIRS([long short])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
