#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([oid-short], [0.1])
AC_CONFIG_AUX_DIR([../build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects])
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION([0.19])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([po/Makefile.in])

AC_OUTPUT
